Handle deletion for admin (TODO: do it for manager as well in the JSP once adding a member has been finished)
git-svn-id: https://svn.surfnet.nl/svn/coin-gui/coin-teams/trunk@1104 3364c4cd-9065-40b6-aee7-261f90ce6533